# gss-archetype-service

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
gss_archetype_service/: archetypes.py  auth.py  cluster.py  interpret.py  loader.py  preprocess.py  schemas.py  service.py
tests/: conftest.py  test_archetypes.py  test_cluster.py  test_interpret.py  test_preprocess.py  test_service.py
